Fix login page invalid login details warning not showing

--- a/client/scss/Home.scss
+++ b/client/scss/Home.scss
@@ -295,7 +295,7 @@
     display: grid;
     align-content: center;
     justify-content: center;
-    font-size: 4vw;
+    font-size: 3vw;
     text-align: center;
     user-select: none;
     color: #dadada;
